@@ -1,3 +1,7 @@
+2001-06-25  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Core.pm: Protect 'new ORAC::Recipe' with a try block
+
 2001-06-18  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Recipe.pm (_parse_recursively): Turn off misc warnings during
